k8s/dev/cloudsql-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
  labels:
    app: cloudsql-proxy
spec:
  ports:
    - name: cloudsql-proxy
      port: 3306
      targetPort: cloudsql-proxy
  selector:
  selector:
    app: cloudsql-proxy
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudsql-proxy
  labels:
    app: cloudsql-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudsql-proxy
    spec:
      containers:
      - image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=tfwiki-182108:us-central1:tfwiki-development=tcp:0.0.0.0:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        ports:
        - containerPort: 3306
          name: cloudsql-proxy
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
