k8s/dev/mediawiki.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: mediawiki
    name: mediawiki
  spec:
    externalTrafficPolicy: Cluster
    ports:
    - name: mediawiki
      port: 80
      protocol: TCP
      targetPort: mediawiki
    selector:
      app: mediawiki
      tier: frontend
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    creationTimestamp: null
    name: mediawiki
    namespace: tfwiki-dev
  spec:
    maxReplicas: 2
    minReplicas: 1
    scaleTargetRef:
      apiVersion: apps/v1beta1
      kind: Deployment
      name: mediawiki
    targetCPUUtilizationPercentage: 80
  status:
    currentReplicas: 0
    desiredReplicas: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      app: mediawiki
    name: mediawiki
    namespace: tfwiki-dev
  spec:
    progressDeadlineSeconds: 2147483647
    replicas: 1
    revisionHistoryLimit: 2147483647
    selector:
      matchLabels:
        app: mediawiki
        tier: frontend
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: mediawiki
          tier: frontend
      spec:
        containers:
        - env:
          - name: MEMCACHED_HOST
            valueFrom:
              configMapKeyRef:
                key: memcached_host
                name: mediawiki-config
                optional: true
          - name: SERVER_URL
            valueFrom:
              configMapKeyRef:
                key: server_url
                name: mediawiki-config
          - name: SITENAME
            valueFrom:
              configMapKeyRef:
                key: sitename
                name: mediawiki-config
                optional: true
          - name: VARNISH_HOST
            valueFrom:
              configMapKeyRef:
                key: varnish_host
                name: mediawiki-config
                optional: true
          - name: TRUSTED_PROXIES
            valueFrom:
              configMapKeyRef:
                key: trusted_proxies
                name: mediawiki-config
                optional: true
          - name: BLACKFIRE_SOCKET
            valueFrom:
              configMapKeyRef:
                key: blackfire_socket
                name: mediawiki-config
                optional: true
          - name: RECAPTCHA_KEY
            valueFrom:
              secretKeyRef:
                key: recaptcha.key
                name: mediawiki-secret
          - name: RECAPTCHA_SECRET
            valueFrom:
              secretKeyRef:
                key: recaptcha.secret
                name: mediawiki-secret
          - name: EMAIL_EMERGENCY_CONTACT
            valueFrom:
              secretKeyRef:
                key: email.emergency_contact
                name: mediawiki-secret
                optional: true
          - name: EMAIL_PASSWORD_SENDER
            valueFrom:
              secretKeyRef:
                key: email.password_sender
                name: mediawiki-secret
                optional: true
          - name: SENTRY_DSN
            valueFrom:
              secretKeyRef:
                key: sentry.dsn
                name: mediawiki-secret
                optional: true
          - name: SMTP_HOST
            valueFrom:
              secretKeyRef:
                key: smtp.host
                name: mediawiki-secret
                optional: true
          - name: SMTP_IDHOST
            valueFrom:
              secretKeyRef:
                key: smtp.idhost
                name: mediawiki-secret
                optional: true
          - name: SMTP_PORT
            valueFrom:
              secretKeyRef:
                key: smtp.port
                name: mediawiki-secret
                optional: true
          - name: SMTP_AUTH
            valueFrom:
              secretKeyRef:
                key: smtp.auth
                name: mediawiki-secret
                optional: true
          - name: SMTP_USERNAME
            valueFrom:
              secretKeyRef:
                key: smtp.username
                name: mediawiki-secret
                optional: true
          - name: SMTP_PASSWORD
            valueFrom:
              secretKeyRef:
                key: smtp.password
                name: mediawiki-secret
                optional: true
          - name: SECRET_KEY
            valueFrom:
              secretKeyRef:
                key: secret_key
                name: mediawiki-secret
          - name: STEAM_API_KEY
            valueFrom:
              secretKeyRef:
                key: steam.api.key
                name: mediawiki-secret
                optional: true
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: db.password
                name: mediawiki-secret
                optional: true
          - name: DB_DATABASE
            valueFrom:
              secretKeyRef:
                key: db.database
                name: mediawiki-secret
                optional: true
          - name: DB_HOST
            valueFrom:
              secretKeyRef:
                key: db.host
                name: mediawiki-secret
                optional: true
          - name: DB_TYPE
            valueFrom:
              secretKeyRef:
                key: db.type
                name: mediawiki-secret
                optional: true
          - name: DB_USER
            valueFrom:
              secretKeyRef:
                key: db.user
                name: mediawiki-secret
                optional: true
          image: tfwiki/mediawiki:1.0.19
          imagePullPolicy: Always
          name: mediawiki
          ports:
          - containerPort: 80
            name: mediawiki
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /wiki/Main_Page
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "10"
              memory: 8Gi
            requests:
              cpu: "8"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/www/html/w/images
            name: mediawiki-images
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mediawiki-images
          persistentVolumeClaim:
            claimName: nfs-dev
  status: {}
kind: List
metadata: {}
